force-app/main/default/objects/Call_Report_Product__c/Call_Report_Product__c.object-meta.xml
<CustomObject>
    <label>Call Report Product</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Product #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Report Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>