force-app/main/default/objects/Call_Report_Product__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alarm Clock</fullName>
            </value>
            <value>
                <fullName>Amber Alert</fullName>
            </value>
            <value>
                <fullName>Automated Arrival &amp; Departure</fullName>
            </value>
            <value>
                <fullName>BluMASS</fullName>
            </value>
            <value>
                <fullName>BOT/EOT</fullName>
            </value>
            <value>
                <fullName>CabCard</fullName>
            </value>
            <value>
                <fullName>Cargo Sensor</fullName>
            </value>
            <value>
                <fullName>Cargo Theft Alert</fullName>
            </value>
            <value>
                <fullName>Content Delivery</fullName>
            </value>
            <value>
                <fullName>Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>DataView</fullName>
            </value>
            <value>
                <fullName>Door Sensor</fullName>
            </value>
            <value>
                <fullName>Driver Email</fullName>
            </value>
            <value>
                <fullName>Driver Login</fullName>
            </value>
            <value>
                <fullName>Driver Notification Service</fullName>
            </value>
            <value>
                <fullName>FleetAdvisor</fullName>
            </value>
            <value>
                <fullName>Hard Braking</fullName>
            </value>
            <value>
                <fullName>Hours of Service</fullName>
            </value>
            <value>
                <fullName>JTRACS</fullName>
            </value>
            <value>
                <fullName>Nav - InCab Only</fullName>
            </value>
            <value>
                <fullName>Nav - Maptuit</fullName>
            </value>
            <value>
                <fullName>OnRoute</fullName>
            </value>
            <value>
                <fullName>Panic Button</fullName>
            </value>
            <value>
                <fullName>Performance Monitoring</fullName>
            </value>
            <value>
                <fullName>PPS</fullName>
            </value>
            <value>
                <fullName>Pre-filled macros</fullName>
            </value>
            <value>
                <fullName>QDI</fullName>
            </value>
            <value>
                <fullName>QMASS</fullName>
            </value>
            <value>
                <fullName>QMI</fullName>
            </value>
            <value>
                <fullName>QTRACS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>