force-app/main/default/objects/Call_Report_Product__c/fields/Call_Report__c.field-meta.xml
<CustomField>
    <fullName>Call_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Report</label>
    <referenceTo>Call_Report__c</referenceTo>
    <relationshipName>Call_Report_Product</relationshipName>
    <type>Lookup</type>
</CustomField>